--- a/lab9_20206466/lab9_20206466/src/main/resources/templates/detalles_meal.html
+++ b/lab9_20206466/lab9_20206466/src/main/resources/templates/detalles_meal.html
@@ -28,17 +28,50 @@
                     <div class="mb-3">
                         <h3>Ingredients:</h3>
                         <ul class="lista_ingredientes">
-                            <li th:text="${meal.strIngredient1}"></li>
-                            <li th:text="${meal.strIngredient2}"></li>
-                            <li th:text="${meal.strIngredient3}"></li>
-                            <li th:text="${meal.strIngredient4}"></li>
-                            <li th:text="${meal.strIngredient5}"></li>
-                            <li th:text="${meal.strIngredient6}"></li>
-                            <li th:text="${meal.strIngredient7}"></li>
-                            <li th:text="${meal.strIngredient8}"></li>
-                            <li th:text="${meal.strIngredient9}"></li>
-                            <li th:text="${meal.strIngredient10}"></li>
-                            <li th:text="${meal.strIngredient11}"></li>
+                            <li>
+                                <span th:text="${meal.strMeasure1}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient1}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure2}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient2}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure3}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient3}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure4}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient4}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure5}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient5}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure6}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient6}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure7}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient7}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure8}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient8}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure9}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient9}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure10}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient10}" class="d-inline"></span>
+                            </li>
+                            <li>
+                                <span th:text="${meal.strMeasure11}" class="d-inline"></span>
+                                <span th:text="${meal.strIngredient11}" class="d-inline"></span>
+                            </li>
                         </ul>
                     </div>
                 </div>
